--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,13 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    
+    # Redirect to public directory
+    RewriteCond %{REQUEST_URI} !^/public/
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ public/$1 [L]
+    
+    # Redirect root to public
+    RewriteCond %{REQUEST_URI} ^/$
+    RewriteRule ^(.*)$ public/index.php [L]
 </IfModule>
-
-
