--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "axios": "^1.7.7",
         "laravel-vite-plugin": "^1.0",
+        "terser": "^5.44.1",
         "vite": "^5.0"
     }
 }
